# Animal-Crossing-Remake

./: CMakeLists.txt  README.md  TODO.txt
old/: ImGuiManager.h
src/: Camera.h  Character.h  Controls.h  Debug.h  DevImGUI.h  Flower.h  Grass.cpp  Grass.h  ImGuiManager.h  LoadOnce.h  Main.cpp  Main.h  Map.h  Monitor.h  Mouse.h  Tree.h  UI.h  Window.h  ui_config.txt
src/Application/: Application.cpp  Application.h
src/Assets/Models/ac_tree_test/: untitled.gltf
src/Assets/Models/flower/: license.txt  scene.gltf
src/Assets/Models/treetest/: treetest.gltf
src/Assets/Shaders/Fragment Shaders/: double_sided.fs
src/Audio/: Audio.cpp  Audio.h
src/Camera/: Camera.cpp  Camera.h  CameraZoom.cpp  CameraZoom.h
src/Character/: Character.cpp  Character.h
src/Controls/: Controls.cpp  Controls.h  Mouse.cpp  Mouse.h
src/Debug/: Debug.cpp  Debug.h
src/Flower/: Flower.cpp  Flower.h
src/GameState/: GameState.cpp  GameState.h
src/Grass/: Grass.cpp  Grass.h
src/Map/: Map.cpp  Map.h
src/Map/Flower/: Flower.cpp  Flower.h
src/Map/Grass/: Grass.cpp  Grass.h
src/Map/Ground/: Ground.cpp  Ground.h  river_locations.txt
src/Map/Tree/: Tree.cpp  Tree.h
src/Menu/: ImGui.h  Menu.cpp  Menu.h
src/Shader/: Shader.cpp  Shader.h
src/Tree/: Tree.cpp  Tree.h
src/UI/: UI.cpp  UI.h
src/Utils/: ConsoleOut.h  Error.h  Utils.h
src/Window/: Window.cpp  Window.h
